[gd_scene load_steps=17 format=3 uid="uid://2hst8v5efxkn"]

[ext_resource type="Script" path="res://Character/NewVillagers/new_villager.gd" id="1_fkd34"]
[ext_resource type="Texture2D" uid="uid://bqxg765vfwai2" path="res://Character/NewVillagers/villager2walk.png" id="2_j8mwk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2t53l"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o5hhg"]
radius = 78.0577

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6acmj"]
size = Vector2(448, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjuq6"]
size = Vector2(20, 358)

[sub_resource type="CircleShape2D" id="CircleShape2D_1n3sy"]
radius = 662.822

[sub_resource type="CircleShape2D" id="CircleShape2D_1tri1"]
radius = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gmla6"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1kvot"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0tjal"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nuwsl"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sefe5"]
radius = 54.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mdlyl"]

[sub_resource type="Animation" id="Animation_pfdd0"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n653n"]
_data = {
"run": SubResource("Animation_pfdd0")
}

[node name="NewVillager" type="CharacterBody2D" node_paths=PackedStringArray("navAgent")]
collision_layer = 4
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_fkd34")
navAgent = NodePath("NavigationAgent2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_j8mwk")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_2t53l")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 1.0
neighbor_distance = 8.9
max_neighbors = 4
debug_enabled = true

[node name="Recalculator" type="Timer" parent="."]
wait_time = 0.25

[node name="aggro" type="Node2D" parent="."]

[node name="fearRange" type="Area2D" parent="aggro" groups=["villager"]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/fearRange"]
visible = false
shape = SubResource("CircleShape2D_o5hhg")
debug_color = Color(1, 1, 1, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="aggro/fearRange"]
visible = false
shape = SubResource("RectangleShape2D_6acmj")
debug_color = Color(1, 1, 1, 0)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="aggro/fearRange"]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_rjuq6")
debug_color = Color(1, 1, 1, 0)

[node name="otherRange" type="Area2D" parent="aggro"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/otherRange"]
visible = false
shape = SubResource("CircleShape2D_1n3sy")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="vilagerRange" type="Area2D" parent="aggro"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/vilagerRange"]
visible = false
shape = SubResource("CircleShape2D_1tri1")
debug_color = Color(0.72549, 0.278431, 0.94902, 0)

[node name="deathRange" type="Area2D" parent="aggro"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/deathRange"]
visible = false
shape = SubResource("CircleShape2D_gmla6")

[node name="HideRange" type="Area2D" parent="aggro"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/HideRange"]
visible = false
shape = SubResource("CircleShape2D_1kvot")
debug_color = Color(0.682353, 0.356863, 0, 0)

[node name="townSquareGet" type="Area2D" parent="aggro"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/townSquareGet"]
visible = false
shape = SubResource("CircleShape2D_0tjal")
debug_color = Color(0.682353, 0.356863, 0, 0)

[node name="theBells" type="Area2D" parent="aggro"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/theBells"]
visible = false
shape = SubResource("CircleShape2D_nuwsl")

[node name="Heirlooms" type="Area2D" parent="aggro"]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/Heirlooms"]
visible = false
shape = SubResource("CircleShape2D_sefe5")
debug_color = Color(0, 0.65098, 0.0392157, 0)

[node name="HeirloomsGrabbed" type="Area2D" parent="aggro"]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro/HeirloomsGrabbed"]
shape = SubResource("CircleShape2D_mdlyl")

[node name="bellChimes" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="tripTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n653n")
}

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Recalculator" to="." method="_on_recalculator_timeout"]
[connection signal="area_entered" from="aggro/fearRange" to="." method="_on_fear_range_area_entered"]
[connection signal="area_exited" from="aggro/fearRange" to="." method="_on_fear_range_area_exited"]
[connection signal="area_entered" from="aggro/otherRange" to="." method="_on_other_range_area_entered"]
[connection signal="area_entered" from="aggro/vilagerRange" to="." method="_on_vilager_range_area_entered"]
[connection signal="area_entered" from="aggro/deathRange" to="." method="_on_death_range_area_entered"]
[connection signal="area_entered" from="aggro/theBells" to="." method="_on_the_bells_area_entered"]
[connection signal="area_entered" from="aggro/Heirlooms" to="." method="_on_heirlooms_area_entered"]
[connection signal="area_entered" from="aggro/HeirloomsGrabbed" to="." method="_on_heirlooms_grabbed_area_entered"]
[connection signal="timeout" from="bellChimes" to="." method="_on_bell_chimes_timeout"]
[connection signal="timeout" from="tripTimer" to="." method="_on_trip_timer_timeout"]
